# dbt-adapters

dbt-database/: README.md  hatch.toml  pyproject.toml
dbt-database/src/dbt/adapters/database/: __init__.py  column.py  connections.py  impl.py  relation.py
dbt-database/src/dbt/adapters/database/record/: __init__.py  handle.py
dbt-database/src/dbt/adapters/database/record/cursor/: cursor.py
dbt-database/src/dbt/adapters/database/relation_configs/: __init__.py  index.py  materialized_view.py
dbt-database/src/dbt/include/database/: dbt_project.yml  profile_template.yml  sample_profiles.yml
dbt-database/src/dbt/include/database/macros/: adapters.sql  catalog.sql  relations.sql  timestamps.sql
dbt-database/src/dbt/include/database/macros/materializations/: incremental_strategies.sql  snapshot_merge.sql
dbt-database/src/dbt/include/database/macros/relations/materialized_view/: alter.sql  create.sql  describe.sql  drop.sql  refresh.sql  rename.sql
dbt-database/src/dbt/include/database/macros/relations/table/: drop.sql  rename.sql  replace.sql
dbt-database/src/dbt/include/database/macros/relations/view/: drop.sql  rename.sql  replace.sql
dbt-database/src/dbt/include/database/macros/utils/: any_value.sql  dateadd.sql  datediff.sql  last_day.sql  listagg.sql  split_part.sql
