[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dbt-database"
description = "The custom adapter plugin for dbt"
readme = "README.md"
keywords = ["dbt", "adapter", "adapters", "database", "elt", "dbt-core", "dbt Core", "dbt Cloud", "dbt Labs", "database"]
requires-python = ">=3.9.0"
authors = [{ name = "dbt Labs", email = "info@dbtlabs.com" }]
maintainers = [{ name = "dbt Labs", email = "info@dbtlabs.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dbt-core>=1.0",
    "dbt-common>=1.0,<2.0",
    "dbt-adapters>=1.0,<2.0",
    "mysql-connector-python>=8.0",
]

[project.urls]
Homepage = "https://github.com/dbt-labs/dbt-adapters/tree/main/dbt-database"
Documentation = "https://docs.getdbt.com"
Repository = "https://github.com/dbt-labs/dbt-adapters.git#subdirectory=dbt-database"
Issues = "https://github.com/dbt-labs/dbt-adapters/issues"
Changelog = "https://github.com/dbt-labs/dbt-adapters/blob/main/dbt-database/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/functional"]
addopts = "-v --color=yes -n auto"
env_files = ["test.env"]
